fix(typing): Add typing to issue endpoint tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -488,30 +488,7 @@ module = [
     "tests.sentry.issues",
     "tests.sentry.issues.auto_source_code_config.*",
     "tests.sentry.issues.endpoints",
-    "tests.sentry.issues.endpoints.test_actionable_items",
-    "tests.sentry.issues.endpoints.test_group_activities",
-    "tests.sentry.issues.endpoints.test_group_details",
-    "tests.sentry.issues.endpoints.test_group_event_details",
-    "tests.sentry.issues.endpoints.test_group_events",
-    "tests.sentry.issues.endpoints.test_group_hashes",
-    "tests.sentry.issues.endpoints.test_group_notes",
-    "tests.sentry.issues.endpoints.test_group_notes_details",
-    "tests.sentry.issues.endpoints.test_group_open_periods",
-    "tests.sentry.issues.endpoints.test_group_similar_issues_embeddings",
-    "tests.sentry.issues.endpoints.test_group_tombstone",
-    "tests.sentry.issues.endpoints.test_group_tombstone_details",
-    "tests.sentry.issues.endpoints.test_organization_group_search_view_details",
-    "tests.sentry.issues.endpoints.test_organization_group_search_view_visit",
-    "tests.sentry.issues.endpoints.test_organization_group_search_views",
-    "tests.sentry.issues.endpoints.test_organization_issues_count",
-    "tests.sentry.issues.endpoints.test_organization_searches",
-    "tests.sentry.issues.endpoints.test_organization_shortid",
-    "tests.sentry.issues.endpoints.test_project_group_stats",
-    "tests.sentry.issues.endpoints.test_project_stacktrace_link",
-    "tests.sentry.issues.endpoints.test_related_issues",
-    "tests.sentry.issues.endpoints.test_shared_group_details",
-    "tests.sentry.issues.endpoints.test_source_map_debug",
-    "tests.sentry.issues.endpoints.test_team_groups_old",
+    "tests.sentry.issues.endpoints.*",
     "tests.sentry.issues.escalating.test_escalating",
     "tests.sentry.issues.escalating.test_escalating_issues_alg",
     "tests.sentry.issues.escalating.test_issue_velocity",
