types(auth-v2): Add to mypy stronglist

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -184,6 +184,7 @@ module = [
     "sentry.auth.manager",
     "sentry.auth.services.*",
     "sentry.auth.view",
+    "sentry.auth_v2.*",
     "sentry.bgtasks.*",
     "sentry.buffer.*",
     "sentry.build.*",
@@ -469,6 +470,7 @@ module = [
     "tests.sentry.api.endpoints.test_project_repo_path_parsing",
     "tests.sentry.api.helpers.test_error_upsampling",
     "tests.sentry.audit_log.services.*",
+    "tests.sentry.auth_v2.*",
     "tests.sentry.deletions.tasks.test_groups",
     "tests.sentry.deletions.test_group",
     "tests.sentry.event_manager.test_event_manager",
