--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,7 +70,7 @@ dependencies = [
     "jsonschema==4.20.0",
     "jsonschema-specifications==2023.7.1",
     "kombu==5.5.3",
-    "lxml>5.3",
+    "lxml==6.0.0",
     "maxminddb==2.3.0",
     "milksnake==0.1.6",
     "mistune==2.0.4",
@@ -99,7 +99,7 @@ dependencies = [
     "python-dateutil==2.9.0.post0",
     "python-rapidjson==1.8",
     "python-u2flib-server==5.0.0",
-    "python3-saml==1.16.0",
+    "python3-saml==1.15.0",
     "pyuwsgi==2.0.28.post1",
     "pyvat==1.3.15",
     "pyyaml==6.0.2",
@@ -151,7 +151,7 @@ dependencies = [
     "vine==5.1.0",
     "vroomrs==0.1.13",
     "wcwidth==0.2.13",
-    "xmlsec>=1.3.16",
+    "xmlsec==1.3.16",
     "zstandard==0.18.0",
 ]
 
@@ -175,13 +175,11 @@ dev = [
     "flake8-logging==1.5",
     "honcho==2",
     "isort==5.10.1",
-    "lxml-stubs==0.5.1",
+    "lxml-stubs>=0.5.1",
     "msgpack-types==0.2.0",
     "mypy==1.15",
     "openapi-core==0.18.2",
     "openapi-pydantic==0.4.0",
-    "packaging>=24",
-    "pip-tools==7.1.0",
     "pre-commit==4.2",
     "pytest==8.1",
     "pytest-cov==4.0.0",
@@ -190,7 +188,7 @@ dev = [
     "pytest-json-report==1.5.0",
     "pytest-rerunfailures==15",
     "pytest-sentry==0.3.0,<0.4.0",
-    "pytest-workaround-12888==1.0.0",
+    "pytest-workaround-12888>=1.0.0",
     "pytest-xdist>=3",
     "pyupgrade==3.19.1",
     "responses==0.23.1",
@@ -201,24 +199,24 @@ dev = [
     "sentry-forked-django-stubs==5.2.1.post3",
     "sentry-forked-djangorestframework-stubs==3.16.0.post1",
     "time-machine==2.16.0",
-    "types-beautifulsoup4==4.12.0.20250516",
-    "types-cachetools==6.0.0.20250525",
-    "types-docker==7.1.0.20250705",
-    "types-jsonschema==4.24.0.20250708",
-    "types-oauthlib==3.3.0.20250708",
-    "types-parsimonious==0.10.0.20240331",
-    "types-pillow==10.2.0.20240822",
-    "types-protobuf==6.30.2.20250703",
-    "types-psutil==7.0.0.20250601",
-    "types-psycopg2==2.9.21.20250516",
-    "types-python-dateutil==2.9.0.20250708",
-    "types-pyyaml==6.0.12.20250516",
+    "types-beautifulsoup4>=4.12.0.20250516",
+    "types-cachetools>=6.1.0.20250717",
+    "types-docker>=7.1.0.20250705",
+    "types-jsonschema>=4.25.0.20250720",
+    "types-oauthlib>=3.3.0.20250708",
+    "types-parsimonious>=0.10.0.20240331",
+    "types-pillow>=10.2.0.20240822",
+    "types-protobuf>=6.30.2.20250703",
+    "types-psutil>=7.0.0.20250601",
+    "types-psycopg2>=2.9.21.20250718",
+    "types-python-dateutil>=2.9.0.20250708",
+    "types-pyyaml>=6.0.12.20250516",
     "types-redis<4",
     "types-requests==2.32.0.20241016",
     "types-requests-oauthlib==2.0.0.20250119",
     "types-setuptools==68",
     "types-simplejson==3.17.7.2",
-    "types-unidiff==0.7.0.20240505",
+    "types-unidiff>=0.7.0.20240505",
 ]
 
 [build-system]
