--- a/.github/workflows/self-hosted.yml
+++ b/.github/workflows/self-hosted.yml
@@ -19,15 +19,8 @@ env:
 
 jobs:
   self-hosted:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        include:
-          - os: ubuntu-24.04
-            platform: amd64
-          - os: ubuntu-24.04-arm
-            platform: arm64
-    name: self-hosted-${{ matrix.os }}-${{ matrix.platform }}
+    runs-on: ubuntu-24.04
+    name: self-hosted
     permissions:
       contents: read
       packages: write
@@ -77,11 +70,11 @@ jobs:
       - uses: getsentry/action-build-and-push-images@fcd8e95c518effb0c430d08f4771aa245661c3f5
         with:
           image_name: 'sentry'
-          platform: ${{ matrix.platform }}
+          platforms: linux/amd64,linux/arm64
           dockerfile_path: 'self-hosted/Dockerfile'
           ghcr: true
           publish_on_pr: true
-          google_ar: false
+          google_ar: true
 
   assemble:
     needs: [self-hosted]
