chore: Use `10.0.0-alpha.2` of SDKs for dogfooding

--- a/package.json
+++ b/package.json
@@ -66,13 +66,13 @@
     "@sentry-internal/rrweb": "2.34.0",
     "@sentry-internal/rrweb-player": "2.34.0",
     "@sentry-internal/rrweb-snapshot": "2.34.0",
-    "@sentry/core": "9.40.0",
-    "@sentry/node": "9.40.0",
-    "@sentry/react": "9.40.0",
+    "@sentry/core": "10.0.0-alpha.2",
+    "@sentry/node": "10.0.0-alpha.2",
+    "@sentry/react": "10.0.0-alpha.2",
     "@sentry/release-parser": "^1.3.1",
     "@sentry/status-page-list": "^0.6.1",
     "@sentry/toolbar": "1.0.0-beta.16",
-    "@sentry/webpack-plugin": "^3.4.0",
+    "@sentry/webpack-plugin": "^4.0.0",
     "@swc/plugin-emotion": "10.0.2",
     "@tanstack/query-async-storage-persister": "^5.72.1",
     "@tanstack/react-query": "^5.72.1",
