--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -8,7 +8,7 @@ devservices==1.2.1
 covdefaults==2.3.0
 ephemeral-port-reserve==1.1.4
 sentry-covdefaults-disable-branch-coverage==1.0.2
-docker==7
+docker>=7.1.0
 time-machine==2.16.0
 honcho==2
 openapi-core==0.18.2
