chore(tasks) Remove autoreload option from taskworker
Since we implemented signal handlers for SIGTERM/SIGINT --autoreload
has not worked as autoreload runs the worker in non-main thread where
signals handlers cannot be registered. Removing `--autoreload` lets
`devservices foreground taskworker` work again.

I'll revisit autoreload in the future when I figure out how to get it to
play nicely with multiprocessing.

--- a/devservices/config.yml
+++ b/devservices/config.yml
@@ -289,7 +289,7 @@ x-programs:
   devserver:
     command: sentry devserver
   taskworker:
-    command: sentry run taskworker --autoreload
+    command: sentry run taskworker
   taskworker-scheduler:
     command: sentry run taskworker-scheduler
   ingest-events:
