--- a/codecov.yml
+++ b/codecov.yml
@@ -25,6 +25,10 @@ coverage:
     - static/app/routes.tsx
     - static/app/**/*.stories.tsx
     - static/app/**/__stories__/
+    - bin/**
+    - fixtures/**
+    - tests/**
+    - tools/**
 
 component_management:
   individual_components:
@@ -57,7 +61,7 @@ flags:
     carryforward: true
     # Do not send any status checks until n coverage reports are uploaded.
     # NOTE: If you change this, make sure to change `comment.after_n_builds` below as well.
-    after_n_builds: 29
+    after_n_builds: 22
 
 # https://docs.codecov.com/docs/flags#two-approaches-to-flag-management
 flag_management:
@@ -84,7 +88,7 @@ comment:
   ######################
   # This is the addition of carry forward builds and fresh builds, thus, it's the addition
   # of the FE and BE builds
-  after_n_builds: 22
+  after_n_builds: 26
   # What to render in the comment
   layout: 'diff, condensed_files'
   # Do not show the project coverage in the comment
