--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -27,6 +27,11 @@ on:
           - '[0, 1, 2, 3]'
           - '[0, 1, 2]'
           - '[0, 1]'
+      jest_instance_count:
+        description: 'Number of instances to run the tests on (1-6)'
+        required: true
+        default: 4
+        type: number
 
 # Cancel in progress workflows on pull_requests.
 # https://docs.github.com/en/actions/using-jobs/using-concurrency#example-using-a-fallback-value
@@ -189,7 +194,7 @@ jobs:
         # XXX: When updating this, make sure you also update CI_NODE_TOTAL.
         instance: ${{ fromJSON(inputs.jest_instances) }}
         include:
-          - node_total: ${{ fromJSON(inputs.jest_instances).length }}
+          - instance_count: ${{ fromJSON(inputs.jest_instance_count) }}
 
     steps:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
@@ -221,7 +226,7 @@ jobs:
           #      Otherwise, if there are other things in the matrix, using strategy.job-total
           #      wouldn't be correct. Also, if this increases, make sure to also increase
           #      `flags.frontend.after_n_builds` in `codecov.yml`.
-          CI_NODE_TOTAL: ${{ matrix.node_total }}
+          CI_NODE_TOTAL: ${{ matrix.instance_count }}
           CI_NODE_INDEX: ${{ matrix.instance }}
           # Disable testing-library from printing out any of of the DOM to
           # stdout. No one actually looks through this in CI, they're just
