--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -192,7 +192,7 @@ jobs:
       fail-fast: false
       matrix:
         # XXX: When updating this, make sure you also update CI_NODE_TOTAL.
-        instance: ${{ fromJSON(inputs.jest_instances) }}
+        instance: ${{ fromJSON(inputs.jest_instances || '[0, 1, 2, 3]') }}
 
     steps:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
@@ -224,7 +224,7 @@ jobs:
           #      Otherwise, if there are other things in the matrix, using strategy.job-total
           #      wouldn't be correct. Also, if this increases, make sure to also increase
           #      `flags.frontend.after_n_builds` in `codecov.yml`.
-          CI_NODE_TOTAL: ${{ fromJSON(inputs.jest_instance_count) }}
+          CI_NODE_TOTAL: ${{ fromJSON(inputs.jest_instance_count || '4') }}
           CI_NODE_INDEX: ${{ fromJSON(matrix.instance) }}
           # Disable testing-library from printing out any of of the DOM to
           # stdout. No one actually looks through this in CI, they're just
@@ -233,7 +233,7 @@ jobs:
           # This quiets up the logs quite a bit.
           DEBUG_PRINT_LIMIT: 0
 
-          SHARD_STRATEGY: ${{ inputs.jest_shard_strategy }}
+          SHARD_STRATEGY: ${{ inputs.jest_shard_strategy || 'original' }}
         run: |
           if [ ${{ github.ref }} = 'refs/heads/master' ]; then
             pnpm run test-ci --forceExit --coverage
