--- a/codecov.yml
+++ b/codecov.yml
@@ -61,13 +61,43 @@ flags:
     carryforward: true
     # Do not send any status checks until n coverage reports are uploaded.
     # NOTE: If you change this, make sure to change `comment.after_n_builds` below as well.
+    # this should match MATRIX_INSTANCE_TOTAL in backend.yml
     after_n_builds: 22
+  backend-migration:
+    paths:
+      - '**/*.py'
+    carryforward: true
+    # Do not send any status checks until n coverage reports are uploaded.
+    # NOTE: If you change this, make sure to change `comment.after_n_builds` below as well.
+    after_n_builds: 1
+  cli:
+    paths:
+      - '**/*.py'
+    carryforward: true
+    # Do not send any status checks until n coverage reports are uploaded.
+    # NOTE: If you change this, make sure to change `comment.after_n_builds` below as well.
+    after_n_builds: 1
+  monolith-dbs:
+    paths:
+      - '**/*.py'
+    carryforward: true
+    # Do not send any status checks until n coverage reports are uploaded.
+    # NOTE: If you change this, make sure to change `comment.after_n_builds` below as well.
+    after_n_builds: 1
+  acceptance:
+    paths:
+      - '**/*.py'
+    carryforward: true
+    # Do not send any status checks until n coverage reports are uploaded.
+    # NOTE: If you change this, make sure to change `comment.after_n_builds` below as well.
+    # this should match MATRIX_INSTANCE_TOTAL in accpetance.yml
+    after_n_builds: 5
 
 # https://docs.codecov.com/docs/flags#two-approaches-to-flag-management
 flag_management:
   individual_flags:
     - name: smart-tests
-      # Prevents the upload with this flag from being copied accross commits
+      # Prevents the upload with this flag from being copied across commits
       carryforward: false
       # https://docs.codecov.com/docs/getting-started-with-ats#step-2-configure-the-codecovyml-for-automated-test-selection
       # carryforward_mode: "labels"
@@ -87,8 +117,8 @@ comment:
   require_bundle_changes: 'bundle_increase'
   ######################
   # This is the addition of carry forward builds and fresh builds, thus, it's the addition
-  # of the FE and BE builds
-  after_n_builds: 26
+  # of the FE and BE builds (after_n_builds across all flags)
+  after_n_builds: 34
   # What to render in the comment
   layout: 'diff, condensed_files'
   # Do not show the project coverage in the comment
