use coalescer to add newly-typed test files to strictlist

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -467,29 +467,50 @@ module = [
     "social_auth.admin",
     "social_auth.migrations.*",
     "sudo.*",
-    "tests.sentry.api.endpoints.issues.test_organization_derive_code_mappings",
+    "tests.sentry.api.endpoints.issues.*",
+    "tests.sentry.api.endpoints.snapshots.*",
     "tests.sentry.api.endpoints.test_browser_reporting_collector",
     "tests.sentry.api.endpoints.test_project_repo_path_parsing",
+    "tests.sentry.api.fields.*",
     "tests.sentry.api.helpers.test_error_upsampling",
-    "tests.sentry.audit_log.services.*",
+    "tests.sentry.api.validators.*",
+    "tests.sentry.audit_log.*",
+    "tests.sentry.auth.authenticators.*",
+    "tests.sentry.auth.providers.google.*",
+    "tests.sentry.auth.services.*",
+    "tests.sentry.celery.*",
+    "tests.sentry.coreapi.*",
+    "tests.sentry.data_export.processors.*",
+    "tests.sentry.data_secrecy.*",
+    "tests.sentry.debug.*",
     "tests.sentry.deletions.tasks.test_groups",
     "tests.sentry.deletions.test_group",
+    "tests.sentry.digests.backends.*",
+    "tests.sentry.dynamic_sampling.rules.biases.snapshots.*",
+    "tests.sentry.event_manager.interfaces.snapshots.*",
     "tests.sentry.event_manager.test_event_manager",
-    "tests.sentry.eventstore.snuba.test_backend",
+    "tests.sentry.eventstore.processing.*",
+    "tests.sentry.eventstore.snuba.*",
+    "tests.sentry.eventstream.kafka.*",
+    "tests.sentry.eventtypes.*",
+    "tests.sentry.flags.providers.*",
     "tests.sentry.grouping.*",
     "tests.sentry.hybridcloud.*",
     "tests.sentry.incidents.serializers.*",
+    "tests.sentry.insights.*",
+    "tests.sentry.integrations.api.serializers.*",
+    "tests.sentry.integrations.discord.message_builder.*",
+    "tests.sentry.integrations.jira.models.*",
+    "tests.sentry.integrations.jira.utils.*",
+    "tests.sentry.integrations.models.*",
     "tests.sentry.integrations.msteams.webhook.*",
-    "tests.sentry.integrations.repository.base.*",
-    "tests.sentry.integrations.repository.issue_alert.*",
+    "tests.sentry.integrations.repository.*",
     "tests.sentry.integrations.slack.threads.*",
     "tests.sentry.issues",
     "tests.sentry.issues.auto_source_code_config.*",
     "tests.sentry.issues.endpoints",
     "tests.sentry.issues.endpoints.*",
-    "tests.sentry.issues.escalating.test_escalating",
-    "tests.sentry.issues.escalating.test_escalating_issues_alg",
-    "tests.sentry.issues.escalating.test_issue_velocity",
+    "tests.sentry.issues.escalating.*",
     "tests.sentry.issues.ownership.*",
     "tests.sentry.issues.test_attributes",
     "tests.sentry.issues.test_group_attributes_dataset",
@@ -508,30 +529,70 @@ module = [
     "tests.sentry.issues.test_status_change",
     "tests.sentry.issues.test_status_change_consumer",
     "tests.sentry.issues.test_update_inbox",
+    "tests.sentry.mail.activity.*",
+    "tests.sentry.manager.*",
     "tests.sentry.middleware.test_reporting_endpoint",
+    "tests.sentry.models.fixtures.*",
     "tests.sentry.nodestore.*",
+    "tests.sentry.notifications.notifications.organization_request.*",
+    "tests.sentry.notifications.platform.discord.*",
+    "tests.sentry.notifications.platform.email.*",
+    "tests.sentry.notifications.platform.msteams.*",
+    "tests.sentry.notifications.platform.slack.*",
+    "tests.sentry.onboarding_tasks.*",
     "tests.sentry.organizations.*",
+    "tests.sentry.partnerships.*",
+    "tests.sentry.plugins.interfaces.*",
+    "tests.sentry.plugins.sentry_useragents.*",
     "tests.sentry.post_process_forwarder.*",
+    "tests.sentry.processing.eventstore.*",
     "tests.sentry.profiling.*",
+    "tests.sentry.projects.*",
     "tests.sentry.queue.*",
     "tests.sentry.ratelimits.test_leaky_bucket",
     "tests.sentry.relay.config.test_metric_extraction",
+    "tests.sentry.relay.snapshots.*",
+    "tests.sentry.release_health.release_monitor.*",
+    "tests.sentry.relocation.api.serializers.*",
+    "tests.sentry.replays.lib.*",
     "tests.sentry.replays.unit.lib.*",
+    "tests.sentry.replays.unit.usecases.*",
     "tests.sentry.rules.actions.base.*",
+    "tests.sentry.rules.filters.*",
+    "tests.sentry.rules.history.endpoints.*",
+    "tests.sentry.runner.commands.presenters.*",
     "tests.sentry.security.*",
+    "tests.sentry.seer.anomaly_detection.*",
+    "tests.sentry.seer.workflows.*",
+    "tests.sentry.sentry_apps.api.bases.*",
+    "tests.sentry.sentry_apps.api.parsers.*",
+    "tests.sentry.sentry_apps.api.serializers.*",
+    "tests.sentry.sentry_apps.external_issues.*",
+    "tests.sentry.sentry_apps.models.*",
+    "tests.sentry.sentry_apps.services.*",
+    "tests.sentry.sentry_apps.utils.*",
+    "tests.sentry.sentry_apps.web.*",
     "tests.sentry.snuba.metrics.test_metrics_query_layer.*",
     "tests.sentry.tasks.integrations.*",
+    "tests.sentry.tasks.snapshots.*",
     "tests.sentry.tasks.test_code_owners",
     "tests.sentry.tasks.test_delete_seer_grouping_records",
     "tests.sentry.tasks.test_on_demand_metrics",
+    "tests.sentry.testutils.helpers.*",
     "tests.sentry.types.*",
     "tests.sentry.types.test_actor",
     "tests.sentry.types.test_region",
     "tests.sentry.usage_accountant.*",
+    "tests.sentry.users.api.bases.*",
     "tests.sentry.users.services.*",
     "tests.sentry.utils.kvstore.test_bigtable",
     "tests.sentry.utils.mockdata.*",
+    "tests.sentry.utils.security.*",
+    "tests.sentry.web.forms.*",
+    "tests.sentry.web.frontend.generic.*",
     "tests.sentry.web.frontend.test_cli",
+    "tests.sentry.workflow_engine.endpoints.utils.*",
+    "tests.sentry.workflow_engine.handlers.action.notification.*",
     "tools.*",
 ]
 disallow_any_generics = true
