--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -135,6 +135,7 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           commit_sha: ${{ github.event.pull_request.head.sha }}
+          type: backend
 
   backend-migration-tests:
     if: needs.files-changed.outputs.backend == 'true'
@@ -171,6 +172,7 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           commit_sha: ${{ github.event.pull_request.head.sha }}
+          type: backend-migration
 
   cli:
     if: needs.files-changed.outputs.backend == 'true'
@@ -197,15 +199,6 @@ jobs:
           if command -v devservices; then
             devservices logs
           fi
-
-      # Upload coverage data even if running the tests step fails since
-      # it reduces large coverage fluctuations
-      - name: Handle artifacts
-        if: ${{ always() }}
-        uses: ./.github/actions/artifacts
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          commit_sha: ${{ github.event.pull_request.head.sha }}
 
   requirements:
     if: needs.files-changed.outputs.backend_dependencies == 'true'
@@ -317,6 +310,7 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           commit_sha: ${{ github.event.pull_request.head.sha }}
+          type: monolith-dbs
 
   typing:
     if: needs.files-changed.outputs.backend == 'true'
