fix self hosted build

--- a/self-hosted/Dockerfile
+++ b/self-hosted/Dockerfile
@@ -22,10 +22,10 @@ RUN : \
 
 WORKDIR /usr/src/sentry
 
-ENV PATH=/.venv/bin:$PATH UV_COMPILE_BYTECODE=1 UV_NO_CACHE=1
+ENV PATH=/usr/src/sentry/.venv/bin:$PATH UV_COMPILE_BYTECODE=1 UV_NO_CACHE=1
 # We want to use the image's python for the venv rather
 # than have uv manage it.
-RUN python3 -m venv /.venv
+RUN python3 -m venv .venv
 COPY --from=ghcr.io/astral-sh/uv:0.8.2 /uv /bin/
 
 ENV \
@@ -48,7 +48,7 @@ RUN set -x \
   " \
   && apt-get update \
   && apt-get install -y --no-install-recommends $buildDeps \
-  && uv sync --frozen --quiet \
+  && uv sync --frozen --quiet --no-install-project \
   && mkdir /tmp/uwsgi-dogstatsd \
   # pinned the same as in getsentry
   && wget -O - https://github.com/DataDog/uwsgi-dogstatsd/archive/1a04f784491ab0270b4e94feb94686b65d8d2db1.tar.gz | \
@@ -66,7 +66,9 @@ RUN set -x \
   && mkdir -p $SENTRY_CONF
 
 COPY . .
-RUN sentry help | sed '1,/Commands:/d' | awk '{print $1}' >  /sentry-commands.txt
+RUN : \
+    && uv sync --frozen --quiet \
+    && sentry help | sed '1,/Commands:/d' | awk '{print $1}' >  /sentry-commands.txt
 
 COPY ./self-hosted/sentry.conf.py ./self-hosted/config.yml $SENTRY_CONF/
 COPY ./self-hosted/docker-entrypoint.sh /
