test(relay): add tests for trusted relay signature verification

--- a/src/sentry/testutils/pytest/template/config.yml
+++ b/src/sentry/testutils/pytest/template/config.yml
@@ -21,3 +21,5 @@ aggregator:
   bucket_interval: 1 # Use shortest possible interval to speed up tests
   initial_delay: 0
   debounce_delay: 0
+auth:
+  signature_max_age: 300
