--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -680,4 +680,5 @@ tests/sentry/api/endpoints/test_organization_dashboard_widget_details.py     @ge
 /static/app/components/core/                          @getsentry/design-engineering
 /static/app/icons/                                    @getsentry/design-engineering
 /static/app/stories/                                  @getsentry/design-engineering
+/static/.cursor/BUGBOT.md                             @getsentry/design-engineering
 ## End of Frontend Platform
