typing/tests(db.deletion): Stronger typing & test case change (#101920)
Other changes:
* Swamp `TransactionTestCase` for `TestCase`

`TransactionTestCase` is only needed when testing transaction management
or database features that don't work within transactions. These tests
simply verify cursor-based pagination through data within a single test,
which doesn't require transaction isolation between connections.

`TestCase` is sufficient and faster (uses transaction rollback vs table
truncation for cleanup).

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -376,6 +376,7 @@ module = [
     "sentry.dashboards.*",
     "sentry.data_export.*",
     "sentry.data_secrecy.*",
+    "sentry.db.deletion",
     "sentry.db.models.fields.citext",
     "sentry.db.models.fields.foreignkey",
     "sentry.db.models.fields.hybrid_cloud_foreign_key",
@@ -723,6 +724,7 @@ module = [
     "tests.sentry.charts.*",
     "tests.sentry.data_export.*",
     "tests.sentry.data_secrecy.*",
+    "tests.sentry.db.test_deletion",
     "tests.sentry.debug.utils.*",
     "tests.sentry.deletions.*",
     "tests.sentry.demo_mode.*",
