fix(typing): Add newly-typed modules to strictlist (#102093)
Test plan: `mypy` no errors

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -395,6 +395,7 @@ module = [
     "sentry.eventtypes.error",
     "sentry.explore.migrations.*",
     "sentry.feedback.migrations.*",
+    "sentry.feedback.tasks.*",
     "sentry.filestore.*",
     "sentry.flags.migrations.*",
     "sentry.grouping.api",
@@ -419,6 +420,7 @@ module = [
     "sentry.ingest.slicing",
     "sentry.insights.migrations.*",
     "sentry.integrations.api.parsers.*",
+    "sentry.integrations.coding_agent.*",
     "sentry.integrations.discord.actions.*",
     "sentry.integrations.discord.handlers.*",
     "sentry.integrations.discord.message_builder.*",
@@ -546,14 +548,13 @@ module = [
     "sentry.notifications.notification_action.group_type_notification_registry.*",
     "sentry.notifications.notification_action.issue_alert_registry.*",
     "sentry.notifications.notification_action.metric_alert_registry.*",
-    "sentry.notifications.notifications.organization_request.*",
-    "sentry.notifications.notifications.registries.*",
-    "sentry.notifications.notifications.strategies.*",
+    "sentry.notifications.notifications.*",
     "sentry.notifications.platform.*",
     "sentry.notifications.services.*",
     "sentry.notifications.utils.*",
     "sentry.options.rollout",
     "sentry.organizations.*",
+    "sentry.overwatch.*",
     "sentry.ownership.*",
     "sentry.pipeline.*",
     "sentry.plugins.base.response",
@@ -561,12 +562,16 @@ module = [
     "sentry.plugins.validators.*",
     "sentry.post_process_forwarder.*",
     "sentry.preprod.*",
+    "sentry.prevent.*",
     "sentry.profiles.*",
     "sentry.projects.*",
     "sentry.ratelimits.leaky_bucket",
     "sentry.relay.config.metric_extraction",
     "sentry.relay.types.*",
     "sentry.release_health.release_monitor.*",
+    "sentry.releases.migrations.*",
+    "sentry.releases.serializers.*",
+    "sentry.releases.use_cases.*",
     "sentry.relocation.api.endpoints.artifacts.*",
     "sentry.relocation.api.serializers.*",
     "sentry.relocation.services.*",
@@ -582,6 +587,7 @@ module = [
     "sentry.rules.conditions.*",
     "sentry.rules.history.endpoints.*",
     "sentry.runner.*",
+    "sentry.scim.*",
     "sentry.search.eap.*",
     "sentry.search.snuba.backend",
     "sentry.security.*",
@@ -691,6 +697,7 @@ module = [
     "sentry.web.frontend.auth_provider_login",
     "sentry.web.frontend.cli",
     "sentry.web.frontend.csv",
+    "sentry.web.frontend.debug.charts.*",
     "sentry.web.frontend.mixins.*",
     "sentry.workflow_engine.buffer.*",
     "sentry.workflow_engine.endpoints.utils.*",
@@ -839,10 +846,12 @@ module = [
     "tests.sentry.tasks.test_code_owners",
     "tests.sentry.tasks.test_delete_seer_grouping_records",
     "tests.sentry.tasks.test_on_demand_metrics",
+    "tests.sentry.tempest.endpoints.*",
     "tests.sentry.templatetags.*",
     "tests.sentry.testutils.*",
     "tests.sentry.types.*",
     "tests.sentry.uptime.autodetect.*",
+    "tests.sentry.uptime.migrations.*",
     "tests.sentry.usage_accountant.*",
     "tests.sentry.users.api.bases.*",
     "tests.sentry.users.api.serializers.*",
