feat(conduit): Add conduit demo endpoint (#102177)
Adds a demo endpoint to generate Conduit authentication credentials.
This serves as a reference implementation for integrating with Conduit
for streaming data from backend services to frontend clients.

- An organization endpoint is used for simplicity and is not a
requirement for future use-cases. They just need to have access to the
`org_id`.
- The endpoint is marked as private since it's not intended to be used
outside of internal demos.

I have not written too many endpoints in the Sentry repo so let me know
if I missed anything.

The next steps (coming in future PRs) are:
- Adding a task that this endpoint kicks off to publish data to conduit
- A frontend demo page that consumes the stream via the conduit-client

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -705,3 +705,8 @@ pnpm-lock.yaml                                           @getsentry/owners-js-de
 /static/app/views/prevent/                                @getsentry/prevent
 /static/app/views/nav/secondary/sections/prevent/         @getsentry/prevent
 # End of Prevent
+
+# Conduit
+/src/sentry/conduit/                                  @getsentry/sre-infrastructure-engineering
+/tests/sentry/conduit/                                @getsentry/sre-infrastructure-engineering
+# End of Conduit
