fix(typing): Type src/sentry/integrations/source_code_management (#102704)
Pretty simple addition of types. `get_repository_choices` has a weird
command flow that requires an assert for mypy to recognize that a path
is unreachable, but I feel confident in the correctness there.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -451,7 +451,7 @@ module = [
     "sentry.integrations.slack.threads.*",
     "sentry.integrations.slack.unfurl.*",
     "sentry.integrations.slack.views.*",
-    "sentry.integrations.source_code_management.repository",
+    "sentry.integrations.source_code_management.*",
     "sentry.integrations.utils.sync",
     "sentry.integrations.vsts.actions.*",
     "sentry.integrations.vsts.handlers.*",
