deps(ui): Upgrade color v5 (#102887)
The package is now esm only and drops a few weird sub-dependencies it
had like `is-arrayish` and `simple-swizzle`

--- a/package.json
+++ b/package.json
@@ -83,7 +83,6 @@
     "@tanstack/react-query-devtools": "5.85.0",
     "@tanstack/react-query-persist-client": "5.85.0",
     "@tanstack/react-virtual": "^3.13.6",
-    "@types/color": "^3.0.3",
     "@types/diff": "5.2.1",
     "@types/gtag.js": "^0.0.12",
     "@types/history": "^3.2.5",
@@ -110,7 +109,7 @@
     "buffer": "^6.0.3",
     "cbor2": "^1.12.0",
     "classnames": "2.3.1",
-    "color": "^4.2.3",
+    "color": "5.0.2",
     "compression-webpack-plugin": "11.1.0",
     "conduit-client": "^0.4.0",
     "core-js": "3.45.0",
