fix(typing): Type sentry.ratelimits (#102908)
Just needed a few missing types. EZPZ.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -565,7 +565,7 @@ module = [
     "sentry.prevent.*",
     "sentry.profiles.*",
     "sentry.projects.*",
-    "sentry.ratelimits.leaky_bucket",
+    "sentry.ratelimits.*",
     "sentry.relay.config.metric_extraction",
     "sentry.relay.types.*",
     "sentry.release_health.release_monitor.*",
