--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@stripe/stripe-js": "^5.10.0",
     "@swc/plugin-emotion": "11.0.3",
     "@tanstack/query-async-storage-persister": "5.83.1",
+    "@tanstack/react-pacer": "^0.17.0",
     "@tanstack/react-query": "5.85.0",
     "@tanstack/react-query-devtools": "5.85.0",
     "@tanstack/react-query-persist-client": "5.85.0",
