feat(grpc): Add gRPC-Web service for SCM integrations
- Implement gRPC-Web service exposing SCM integration capabilities via RPC
- Add authentication using symmetric keys from Sentry options
- Create thin proxy layer delegating to existing integration interfaces
- Provide client package with generated protobuf definitions
- Support both token-based and HMAC signature authentication
- Enable external services to interact with Sentry's SCM functionality

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@ sentry-package.json
 /dist
 /env
 /tmp
+/packages
+/src/sentry/integrations/grpc/generated/
 node_modules
 /src/sentry/apidocs/api_ownership_stats_dont_modify.json
 /src/sentry/assets.json
